# soroban-multisig-vault

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
contracts/vault/: Cargo.toml
contracts/vault/src/: contract.rs  errors.rs  lib.rs  storage.rs  types.rs
docs/: ISSUES.md
frontend/: .env.example  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/vault/: page.tsx
frontend/src/app/vault/proposals/: page.tsx
frontend/src/app/vault/proposals/[id]/: page.tsx
frontend/src/app/vault/propose/: page.tsx
frontend/src/lib/: vaultClient.ts
scripts/: deploy.sh
