[package]
name = "vault"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "26.1.0" }

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
